<resources>
    <string name="app_name">Dispositivo IoT FiWARE</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo_Dipositivo_Local">Dispositivo:</string>
    <string name="Titulo_Dipositivo_User_Name">Nombre Usuario:</string>
    <string name="Titulo_Dipositivo_Local_Name">Identificador Dispositivo:</string>
    <string name="Titulo_Dipositivo_Local_Password">Clave:</string>
    <string name="Titulo_Dipositivo_Remoto">Dispositivo Remoto:</string>
    <string name="Titulo_Recurso_Remoto">Recurso Remoto:</string>
    <string name="Titulo_Potenciometro">Valor Potenciometro:</string>
    <string name="Titulo_Estado">Estado:</string>
    <string name="Titulo_Dominio_Name">Servicio:</string>
    <string name="Titulo_Project_Name">Subservicio:</string>
    <string name="Titulo_User_Token">Token:</string>
    <string name="Value_Entity">Valor:</string>
    <string name="Value_Entity_Humidity_access">Time:</string>
    <string name="Estado_Entity">Estado:</string>

</resources>
