<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ppere.Estresador_Orion.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="@dimen/rellenodi">


                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Titulo_Dipositivo_Local" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Titulo_Dipositivo_Local_Name" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="   " />


                        <EditText
                            android:id="@+id/textView_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:paddingBottom="0dp"
                            android:paddingTop="0dp"
                            android:text="Android_SEU_3n5"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Titulo_Dominio_Name" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="   " />

                        <EditText
                            android:id="@+id/textView_domain_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:paddingBottom="0dp"
                            android:paddingTop="0dp"
                            android:text="Asignatura_SEU_2016"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Titulo_Dipositivo_Local_Password" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="   " />

                        <EditText
                            android:id="@+id/textView_passwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:paddingBottom="0dp"
                            android:paddingTop="0dp"
                            android:text="changeme"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Titulo_User_Token" />

                        <TextView
                            android:id="@+id/textView34"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="   " />

                        <TextView
                            android:id="@+id/textView_token"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:ems="10"
                            android:inputType="text"
                            android:paddingBottom="0dp"
                            android:paddingTop="0dp"
                            android:text=""
                            android:textSize="14dp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="@dimen/rellenodi">

                    <ToggleButton
                        android:id="@+id/LOGIN"
                        android:layout_width="110dp"
                        android:layout_height="83dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textOff="SteelSkin"
                        android:textOn="SteelSkin" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="@dimen/rellenodi">

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Titulo_Dipositivo_Local_Name" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="   " />

                    <EditText
                        android:id="@+id/textView_rr_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:paddingBottom="0dp"
                        android:text="SensorSEU27.Temperature"
                        android:textSize="14dp" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Value_Entity" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="   " />

                    <EditText
                        android:id="@+id/textView_Value_Entity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:paddingBottom="0dp"
                        android:text="991199"
                        android:textSize="14dp" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Value_Entity" />

                    <SeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="200" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="   " />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/buttonActualize"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Actualiza" />

                    <ToggleButton
                        android:id="@+id/AUTO_ACT"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="AUTO"
                        android:textOn="AUTO" />
                </LinearLayout>


            </LinearLayout>

            <!--        -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="@dimen/rellenodi">

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView212"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Titulo_Dipositivo_Local_Name" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="   " />

                    <EditText
                        android:id="@+id/textView_rr_led_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp"
                        android:text="SensorSEU27"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <ToggleButton
                        android:id="@+id/buttonLED1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="LED1"
                        android:textOff="LED1 "
                        android:textOn="LED1" />

                    <ToggleButton
                        android:id="@+id/buttonLED2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="LED2 "
                        android:textOn="LED2" />

                    <ToggleButton
                        android:id="@+id/buttonLED3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="LED3 "
                        android:textOn="LED3" />

                    <ToggleButton
                        android:id="@+id/buttonLED4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="LED4"
                        android:textOn="LED4" />

                </LinearLayout>

            </LinearLayout>


            <!--        -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="@dimen/rellenodi">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView554"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Titulo_Estado" />

                    <ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/TextViewEstado"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="" />
                    </ScrollView>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
